fdo#71729: Fill the range edit boxes after the table is fully initialized.

Otherwise the range formula expression would not be available yet.

Change-Id: If9c5040366f9038e8094fd5448ca5e4ee2e73edd